test/fail/match/match_bad_decompose.lly
#[
SyntaxError: Expected '(', not ':'.
    from match_bad_decompose.lly:9:
]#

var v = None

match v: {
    case Some:
    case None:
}
